--- a/index.html
+++ b/index.html
@@ -9,26 +9,45 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-.w3-sidebar a {font-family: "Roboto", sans-serif}
-body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    background-color: black;
+    color: white;
+}
+
+.w3-sidebar {
+    height: 100vh !important;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 550px;
+    background-color: #f1f1f1;
+    overflow-y: auto; /* Scroll if needed */
+}
+
+.w3-main {
+    margin-left: 250px;
+    padding: 20px;
+}
+
 </style>
+
 </head>
-<body class="w3-content" style="max-width:1200px">
+<body class="w3-content" style="max-width:1350px">
 
 <!-- Sidebar/menu -->
-<nav class="w3-sidebar w3-bar-block w3-white w3-collapse w3-top" style="z-index:3;width:250px" id="mySidebar">
-  <div class="w3-container w3-display-container w3-padding-16">
+<nav class="w3-sidebar w3-bar-block w3-green  w3-text-color-white w3-collapse w3-top" style="z-index:3;width:350px" id="mySidebar">
+  <div class="w3-container w3-display-container w3-padding-16 w3-center">
     <i onclick="w3_close()" class="fa fa-remove w3-hide-large w3-button w3-display-topright"></i>
-    <h3 class="w3-wide"><b>Buddies</b></h3>
-  </div>
-  <div class="w3-padding-64 w3-large w3-text-grey" style="font-weight:bold">
+    <img src="https://i.ibb.co/23X70nBJ/Screenshot-20250122-180301-Drive.jpg" alt="Screenshot-20250122-180301-Drive" border="10px;" style="width: 300px; height: 300px;">
+</div>
+
+  <div class="w3-padding-64 w3-large w3-text-purple" style="font-weight:bold">
     <a href="#" class="w3-bar-item w3-button">Buddies</a>
         <a href="#" class="w3-bar-item w3-button">NFT*COMING SOON*</a>
-        <a href="#" class="w3-bar-item w3-button">DAO</a>
-        <a href="#" class="w3-bar-item w3-button">Road Map</a>
-        <a href="#" class="w3-bar-item w3-button">Events</a>
-        <a onclick="myAccFunc()" href="javascript:void(0)" class="w3-button w3-block w3-white w3-left-align" id="myBtn">
-        Apperel & More<i class="fa fa-caret-down"></i>
+        <a href="#" class="w3-bar-item w3-button">DAO</a> <a onclick="myAccFunc()" href="javascript:void(0)" class="w3-button w3-block w3-text-purple w3-green w3-left-align" id="myBtn"> Apperel & More<i class="fa fa-caret-down"></i>
       </a>
       <div id="demoAcc" class="w3-bar-block w3-hide w3-padding-large w3-medium">
         <a href="#" class="w3-bar-item w3-button">Shirts/Hoodies</a>
@@ -62,7 +81,7 @@ body,h1,h2,h3,h4,h5,h6,.w3-wide {font-family: "Montserrat", sans-serif;}
   
   <!-- Top header -->
   <header class="w3-container w3-xlarge">
-    <p class="w3-left">Budies Krew</p>
+    <div class="w3-text-white">BUD'ies</div>
     <p class="w3-right">
       <i class="fa fa-shopping-cart w3-margin-right"></i>
       <i class="fa fa-search"></i>
@@ -172,4 +191,3 @@ function w3_close() {
 
 </body>
 </html>
-
