--- a/index.html
+++ b/index.html
@@ -88,10 +88,37 @@ html, body {
     </p>
   </header>
 
+    <p> <div class="w3-text-14px w3-padding" > <br><h1><b>What Are BUD'ies?</b></h1>
+BUD'ies are a unique and innovative collection of characters inspired by the most iconic marijuana strains. Each character represents a specific strain, combining its look, effects, and personality into a creative and visually striking design. From OG classics to today's favorites, BUD'ies celebrate the diversity and history of cannabis culture in a fun and relatable way.
+
+<p><h2>The Purpose of BUD'ies</h2></p>
+BUD'ies aim to connect cannabis enthusiasts through art, creativity, and storytelling. Our mission is to make cannabis culture more approachable and engaging while giving each strain its own character and personality. By combining the worlds of art, merchandise, and digital innovation, BUD'ies offer something for everyone, whether you're a collector, a marketer, or simply a fan of cannabis.
+
+<br>
+<p>Planned Uses</p>
+The BUD'ies brand has big plans, starting with the release of exclusive NFT collections:
+
+Each NFT will feature a high-quality digital rendering of a BUD'ies character, complete with unique traits, backstory, and exclusive perks for holders.
+
+These NFTs will serve as collectibles and provide access to future benefits, including limited-edition merchandise, voting rights for new character designs, and even early access to future releases.
+
+<p><h3>What’s Next?</h3></p>
+<ol>After the NFT launch, we plan to expand the BUD'ies universe with:
+
+<li> Merchandise: Apparel, collectibles, and accessories featuring your favorite BUD'ies.</li>
+
+ <li>Marketing Opportunities: Licensing BUD'ies characters for cannabis-related branding, advertising, and packaging.<li>
+
+<li>Interactive Content: Expanding BUD'ies into the metaverse, offering an immersive experience for fans to connect with their favorite characters.<li>
+</ol>
+<h4>Why BUD'ies?</h4>
+BUD'ies are more than just characters—they’re a movement to bring cannabis culture to life. They highlight the creativity, community, and individuality that cannabis represents, offering a fresh and exciting way to celebrate this growing industry.
+
+Stay tuned for the first NFT drop and become a part of the BUD'ies journey. Together, we’re creating a world where every strain has a story!</div></p>
 
   <!-- Subscribe section -->
   <div class="w3-container w3-black w3-padding-32">
-    <h1>Subscribe</h1>
+    <h5>Subscribe</h5>
     <p>To get special offers and VIP treatment:</p>
     <p><input class="w3-input w3-border" type="text" placeholder="Enter e-mail" style="width:100%"></p>
     <button type="button" class="w3-button w3-red w3-margin-bottom">Subscribe</button>
@@ -101,7 +128,7 @@ html, body {
   <footer class="w3-padding-64 w3-light-grey w3-small w3-center" id="footer">
     <div class="w3-row-padding">
       <div class="w3-col s4">
-        <h4>Contact</h4>
+        <h6>Contact</h6>
         <p>Questions? Go ahead.</p>
         <form action="/action_page.php" target="_blank">
           <p><input class="w3-input w3-border" type="text" placeholder="Name" name="Name" required></p>
@@ -113,7 +140,7 @@ html, body {
       </div>
 
       <div class="w3-col s4">
-        <h4>About</h4>
+        <h6>About</h6>
         <p><a href="#">About us</a></p>
         <p><a href="#">We're hiring</a></p>
         <p><a href="#">Support</a></p>
@@ -126,11 +153,11 @@ html, body {
       </div>
 
       <div class="w3-col s4 w3-justify">
-        <h4>Store</h4>
+        <h6>Store</h6>
         <p><i class="fa fa-fw fa-map-marker"></i> Company Name</p>
         <p><i class="fa fa-fw fa-phone"></i> 0044123123</p>
         <p><i class="fa fa-fw fa-envelope"></i> ex@mail.com</p>
-        <h4>We accept</h4>
+        <h6>We accept</h6>
         <p><i class="fa fa-fw fa-cc-amex"></i> Amex</p>
         <p><i class="fa fa-fw fa-credit-card"></i> Credit Card</p>
         <br>
