--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@ html, body {
 <!-- Attach the loading script in your <head /> -->
 <script src='https://terminal.jup.ag/main-v3.js'></script>
 
+<a href="<img src="https://i.ibb.co/vCGZR63Z/Untitled.png" alt="Untitled" border="0"></a>"
+
 </head>
 <body class="w3-content" style="max-width:1350px">
 
