--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         }
     </style>
     
-    <img src="https://i.ibb.co/vCGZR63Z/Untitled.png" alt="Untitled" border="10px;" margin="auto;"style="width: 1700px; height: 400px;">
+   <img src="https://i.ibb.co/sd9wvrD9/Photoroom-20250309-192144.png" alt="Photoroom-20250309-192144" border="0">
 </head>
 <body>
     <header><b>BUD'eez 420 Crew</b></header>
