--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Montserrat">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://buddies-420-crew.github.io/NFT.BUDeez.io/Bueez/css/style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" >
     <script src='https://terminal.jup.ag/main-v3.js'></script>
     
     
