--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src='https://terminal.jup.ag/main-v3.js'></script>
     
     
-   <img src="https://i.ibb.co/sd9wvrD9/Photoroom-20250309-192144.png" alt="Photoroom-20250309-192144" border="0">
+   <img src="https://i.ibb.co/sd9wvrD9/Photoroom-20250309-192144.png" alt="Photoroom-20250309-192144" border="0" class="logo">
 </head>
 <body>
     <header><b>BUD'eez 420 Crew</b></header>
