--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Montserrat">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css" >
- 
-    
-   <img src="https://i.ibb.co/sd9wvrD9/Photoroom-20250309-192144.png" alt="Photoroom-20250309-192144" border="0" class="logo">
+    <link rel="stylesheet" href="style.css">
+    <img src="https://i.ibb.co/sd9wvrD9/Photoroom-20250309-192144.png" alt="Photoroom-20250309-192144" border="0" class="logo">
 </head>
 <body>
     <header><b>BUD'eez 420 Crew</b></header>
@@ -25,11 +23,20 @@
     <div class="container">
         <div class="section" id="about">
             <div class="text-content">
-                <h2>About Us</h2>
-                         <p>          BUD'ies aim to connect cannabis enthusiasts through art, creativity, and storytelling. Our mission is to make cannabis culture more approachable and engaging while giving each strain its own character and personality. By combining the worlds of art, merchandise, and digital innovation, BUD'ies offer something for everyone, whether you're a collector, a marketer, or simply a fan of cannabis.
-
-Stay tuned for the first NFT drop and become a part of the BUD'ies journey. Together, we’re creating a world where every strain has a story!</div></p>
-
+                <h2><b>NFTs</b></h2> <!-- Fixed typo here -->
+                <p>This is your ticket to all things BUD'eez!</p>
+                <p><b>What are BUD'eez?</b></p>
+                <p>BUD'eez are a collection of unique characters inspired by cannabis culture. Each BUD'ee has its own personality, backstory, and style, making them the perfect companions for cannabis enthusiasts and collectors alike.</p>
+                <p><b>Why BUD'eez?</b></p>
+                <p>BUD'eez are more than just characters—they’re a movement to bring cannabis culture to life. They highlight the creativity, community, and individuality that cannabis represents, offering a fresh and exciting way to celebrate this growing industry.</p>
+                <p><b>How to Get BUD'eez?</b></p>
+                <p>BUD'eez will be available as NFTs (non-fungible tokens) on the Solana blockchain. Each NFT will feature a high-quality digital rendering of a BUD'ee character, complete with unique traits, backstory, and exclusive perks for holders.</p>
+                <p><b>What's Next?</b></p>
+                <p>After the NFT launch, we plan to expand the BUD'eez universe with merchandise, marketing opportunities, and interactive content. Stay tuned for more updates and join our community to be the first to know about new releases and events.</p>
+                <p><b>Join the BUD'eez 420 Crew today and be part of the movement!</b></p>
+            </div>
+            <div class="cta"><a href="#">Join the Crew</a></div>
+            <div class="cta"><a href="#">View Collection</a></div>
             <div class="spacer"></div>
         </div>
         <div class="section" id="utility">
@@ -51,24 +58,24 @@ Stay tuned for the first NFT drop and become a part of the BUD'ies journey. Toge
             <div class="spacer"></div>
             <div class="text-content">
                 <h2>Roadmap</h2>
-            <p><br>
-<b>The BUD'eez brand has big plans,</b> starting with the release of exclusive NFT collections:
+                <p><br>
+                <b>The BUD'eez brand has big plans,</b> starting with the release of exclusive NFT collections:
 
-Each NFT will feature a high-quality digital rendering of a BUD'ies character, complete with unique traits, backstory, and exclusive perks for holders.
+                Each NFT will feature a high-quality digital rendering of a BUD'ies character, complete with unique traits, backstory, and exclusive perks for holders.
 
-These NFTs will serve as collectibles and provide access to future benefits, including limited-edition merchandise, voting rights for new character designs, and even early access to future releases.
+                These NFTs will serve as collectibles and provide access to future benefits, including limited-edition merchandise, voting rights for new character designs, and even early access to future releases.
 
-<p><h3><b>What’s Next?</b></h3></p>
-<ol>After the NFT launch, we plan to expand the BUD'ies universe with:
-
-<li> Merchandise: Apparel, collectibles, and accessories featuring your favorite BUD'ies.</li>
-
- <li>Marketing Opportunities: Licensing BUD'ies characters for cannabis-related branding, advertising, and packaging.</li>
-
-<li>Interactive Content: Expanding BUD'ies into the metaverse, offering an immersive experience for fans to connect with their favorite characters.</li>
-</ol>
-<h4><b>Why BUD'ies?</b></h4>
-BUD'ies are more than just characters—they’re a movement to bring cannabis culture to life. They highlight the creativity, community, and individuality that cannabis represents, offering a fresh and exciting way to celebrate this growing industry.
+                <h3><b>What’s Next?</b></h3>
+                <ol>
+                    <li>Merchandise: Apparel, collectibles, and accessories featuring your favorite BUD'ies.</li>
+                    <li>Marketing Opportunities: Licensing BUD'ies characters for cannabis-related branding, advertising, and packaging.</li>
+                    <li>Interactive Content: Expanding BUD'ies into the metaverse, offering an immersive experience for fans to connect with their favorite characters.</li>
+                </ol>
+                <h4><b>Why BUD'ies?</b></h4>
+                BUD'ies are more than just characters—they’re a movement to bring cannabis culture to life. They highlight the creativity, community, and individuality that cannabis represents, offering a fresh and exciting way to celebrate this growing industry.
+            </div>
+            <div class="spacer"></div>
+        </div>
         <div class="section" id="community">
             <div class="text-content">
                 <h2>Join Our Community</h2>
@@ -85,8 +92,9 @@ BUD'ies are more than just characters—they’re a movement to bring cannabis c
     <footer>
         &copy; 2025 BUD'ies 420 Crew | All Rights Reserved
     </footer>
+    
+    <!-- Add scripts here -->
     <script src='https://terminal.jup.ag/main-v3.js'></script>
     <script src="script.js"></script>
-
 </body>
 </html>
