--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Montserrat">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/style.css">
     <img src="https://i.ibb.co/sd9wvrD9/Photoroom-20250309-192144.png" alt="Photoroom-20250309-192144" border="0" class="logo">
 </head>
 <body>
@@ -35,8 +35,7 @@
                 <p>After the NFT launch, we plan to expand the BUD'eez universe with merchandise, marketing opportunities, and interactive content. Stay tuned for more updates and join our community to be the first to know about new releases and events.</p>
                 <p><b>Join the BUD'eez 420 Crew today and be part of the movement!</b></p>
             </div>
-            <div class="cta"><a href="#">Join the Crew</a></div>
-            <div class="cta"><a href="#">View Collection</a></div>
+
             <div class="spacer"></div>
         </div>
         <div class="section" id="utility">
@@ -46,14 +45,7 @@
                 <p>Exclusive perks, staking rewards, and more!</p>
             </div>
         </div>
-        <div class="section" id="collab">
-            <div class="text-content">
-                <h2>Collaboration</h2>
-                <p>Partner with us for NFT integration and brand scaling.</p>
-                <div class="cta"><a href="#">Apply for Partnership</a></div>
-            </div>
-            <div class="spacer"></div>
-        </div>
+     
         <div class="section" id="roadmap">
             <div class="spacer"></div>
             <div class="text-content">
@@ -76,6 +68,13 @@
             </div>
             <div class="spacer"></div>
         </div>
+        <div class="section" id="collab">
+            <div class="text-content">
+                <h2>Collaboration</h2>
+                <p>Partner with us for NFT integration and brand scaling.</p>
+                <div class="cta"><a href="#">Apply for Partnership</a></div>
+                <div class="cta"><a href="#">Join the Crew</a></div>
+                <div class="cta"><a href="#">View Collection</a></div></div>
         <div class="section" id="community">
             <div class="text-content">
                 <h2>Join Our Community</h2>
