--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
     </footer>
     
     <!-- Add scripts here -->
-    <script src='https://terminal.jup.ag/main-v3.js'></script>
-    <script src="script.js"></script>
+ <script src='https://terminal.jup.ag/main-v3.js'></script>    <!-- Add scripts here -->
+<script src="script/jup.js"></script> <!-- Ensure this file is in the same directory -->
+<script src="scrip/subscribe.js"></script> 
+<script src="script/age-verification.js"></script><!-- Ensure this file is in the same directory -->
+
 </body>
 </html>
