--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
         <div class="section" id="collab">
             <div class="text-content">
-                <h2>Collaboration</h2>
+                <h2>Apperal & Nore</h2>
                 <p>Partner with us for NFT integration and brand scaling.</p>
                 <div class="cta"><a href="#">Apply for Partnership</a></div>
                 <div class="cta"><a href="#">Join the Crew</a></div>
