--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Montserrat">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style/style.css">
-   <img src="https://i.ibb.co/JWR2Q8LB/BUD-eez-no-background.png" alt="BUD-eez-no-background" border="0">
+   <img src="https://i.ibb.co/JWR2Q8LB/BUD-eez-no-background.png" alt="BUD-eez-no-background" border="0" class="logo">
 </head>
 <body>
     <header><b>BUD'eez 420 Crew</b></header>
