--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Your Styles -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald&display=swap">
-    <link rel="stylesheet" href="/assets/css/main.css"> <!-- Make sure this path is correct -->
+    <link rel="stylesheet" href="/assets/style/style.css"> <!-- Make sure this path is correct -->
 
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
@@ -62,7 +62,9 @@
 
     <!-- Your Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/main.js"></script> <!-- Make sure this path is correct -->
+    <script src="/assets/script/age-verification.js"></script> <!-- Make sure this path is correct -->
+    <script src="/assets/script/jup.js"></script> 
+    <script src="/assets/script/subscribe.js"></script> 
 
   </body>
 </html>
