--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 
     <!-- Your Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/script/age-verification.js"></script> <!-- Make sure this path is correct -->
-    <script src="/assets/script/jup.js"></script> 
-    <script src="/assets/script/subscribe.js"></script> 
+    <script src="assets/script/age-verification.js"></script> <!-- Make sure this path is correct -->
+    <script src="assets/script/jup.js"></script> 
+    <script src="assets/script/subscribe.js"></script> 
 
   </body>
 </html>
