--- a/index.html
+++ b/index.html
@@ -8,22 +8,29 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="traceparent" content="{traceparent}">
     <meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" />
+    
     <title>BUD'eez Apparel & Smoke Shop</title>
-
-    <!-- Your Styles -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald&display=swap">
-    <link rel="stylesheet" href="assets/style/style.css"> <!-- Make sure this path is correct -->
 
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
+    <!-- Fonts & Styles -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald&display=swap">
+    <link rel="stylesheet" href="assets/style/style.css"> <!-- Ensure this path is correct -->
   </head>
 
   <body class="squarespace-config squarespace-editable">
     <div class="sqs-damask" data-test="appshell-container">
       <!-- BEGIN: Apparel Page Custom Content -->
       <section class="container py-5 text-center">
-        <img src="https://i.ibb.co/JWR2Q8LB/BUD-eez-no-background.png" alt="BUD'eez Logo" class="img-fluid mb-4" style="max-width: 300px;">
+        <img 
+          src="https://i.ibb.co/JWR2Q8LB/BUD-eez-no-background.png" 
+          alt="BUD'eez Logo" 
+          class="img-fluid mb-4" 
+          style="max-width: 300px;"
+        >
+        
         <h1 class="mb-3" style="font-family: 'Oswald', sans-serif;">BUD'eez Apparel & Smoke Shop</h1>
         <p class="lead">Wear it. Smoke it. Live it.</p>
 
@@ -37,6 +44,7 @@
               <li>Eco-friendly Joggers</li>
             </ul>
           </div>
+
           <div class="col-md-6">
             <h2>💨 Smoke Shop Essentials</h2>
             <ul>
@@ -60,11 +68,10 @@
       <!-- END: Apparel Page Custom Content -->
     </div>
 
-    <!-- Your Scripts -->
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/script/age-verification.js"></script> <!-- Make sure this path is correct -->
+    <script src="assets/script/age-verification.js"></script>
     <script src="assets/script/jup.js"></script> 
     <script src="assets/script/subscribe.js"></script> 
-
   </body>
 </html>
