--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Montserrat">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="assets/style/style.css">
 
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
@@ -97,9 +97,9 @@
 
     <!-- Scripts -->
     <script src="https://terminal.jup.ag/main-v3.js"></script>
-    <script src="script/jup.js"></script>
-    <script src="script/subscribe.js"></script>
-    <script src="script/age-verification.js"></script>
+    <script src="assets/script/jup.js"></script>
+    <script src="assets/script/subscribe.js"></script>
+    <script src="assets/script/age-verification.js"></script>
   </body>
 </html>
 
