--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
 
     <!-- Navigation -->
     <nav class="w3-bar w3-black w3-padding-16 w3-center">
+      <a href="http://budeez420crew.com" class="w3-bar-item w3-button">Home</a>
+      <a href="#Collection" class="w3-bar-item w3-button">Collection</a>
+      <a href="#Appearal" class="w3-bar-item w3-button">Appearal</a>
+      <a href="#420 Gear" class="w3-bar-item w3-button">420 Gear</a>
       <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#utility" class="w3-bar-item w3-button">Utility</a>
       <a href="#collab" class="w3-bar-item w3-button">Collaboration</a>
-      <a href="#roadmap" class="w3-bar-item w3-button">Roadmap</a>
       <a href="#community" class="w3-bar-item w3-button">Community</a>
     </nav>
 
@@ -61,7 +63,7 @@
 
         <div class="mt-5">
           <h2>🧢 Drop Collections</h2>
-          <p>Monthly collections that fuse fashion and functionality for the lifted lifestyle.</p>
+          <p>Functionality for the lifted lifestyle, Find your favorite strain, gear, or BUD'ee'z</p>
           <h4 class="text-primary">Next Drop: 04/20 – Stay Lit Collection</h4>
           <p>Celebrate 420 in style with glow-in-the-dark gear, neon trays, and collab tees from local artists.</p>
 
@@ -99,44 +101,51 @@
     <script src="https://terminal.jup.ag/main-v3.js"></script>
     <script src="script/jup.js"></script>
     <script src="script/subscribe.js"></script>
-    <script src="script/age-verification.js"></script>
+    <!--<script src="script/age-verification.js"></script>-->
 
     <script>
 document.addEventListener("DOMContentLoaded", function () {
-  const AGE_KEY = "isVerified21";
-  if (localStorage.getItem(AGE_KEY) === "true") return;
+    const AGE_KEY = "isVerified21";
+    
+    // Check if user has already verified their age
+    if (localStorage.getItem(AGE_KEY) === "true") {
+        return; // Allow access
+    }
 
-  let modal = document.createElement("div");
-  modal.style.position = "fixed";
-  modal.style.top = "0";
-  modal.style.left = "0";
-  modal.style.width = "100%";
-  modal.style.height = "100%";
-  modal.style.backgroundColor = "rgba(0,0,0,0.9)";
-  modal.style.display = "flex";
-  modal.style.alignItems = "center";
-  modal.style.justifyContent = "center";
-  modal.style.flexDirection = "column";
-  modal.style.zIndex = "10000";
+    // Create a modal popup
+    let modal = document.createElement("div");
+    modal.style.position = "fixed";
+    modal.style.top = "0";
+    modal.style.left = "0";
+    modal.style.width = "100%";
+    modal.style.height = "100%";
+    modal.style.backgroundColor = "rgba(0,0,0,0.9)";
+    modal.style.display = "flex";
+    modal.style.alignItems = "center";
+    modal.style.justifyContent = "center";
+    modal.style.flexDirection = "column";
+    modal.style.zIndex = "10000";
 
-  modal.innerHTML = `
-    <div style="background: #fff; padding: 20px; border-radius: 10px; text-align: center; max-width: 400px;">
-      <h2 style="color: black;">Are you 21 or older?</h2>
-      <button id="yesBtn" style="margin: 10px; padding: 10px 20px; background: green; color: white; border: none; cursor: pointer;">Yes</button>
-      <button id="noBtn" style="margin: 10px; padding: 10px 20px; background: red; color: white; border: none; cursor: pointer;">No</button>
-    </div>
-  `;
-  document.body.appendChild(modal);
+    modal.innerHTML = `
+        <div style="background: #fff; padding: 20px; border-radius: 10px; text-align: center; max-width: 400px;">
+            <h2 style="color: black;">Are you 21 or older?</h2>
+            <button id="yesBtn" style="margin: 10px; padding: 10px 20px; background: green; color: white; border: none; cursor: pointer;">Yes</button>
+            <button id="noBtn" style="margin: 10px; padding: 10px 20px; background: red; color: white; border: none; cursor: pointer;">No</button>
+        </div>
+    `;
+    document.body.appendChild(modal);
 
-  document.getElementById("yesBtn").addEventListener("click", function () {
-    localStorage.setItem(AGE_KEY, "true");
-    modal.remove();
-  });
+    // Button actions
+    document.getElementById("yesBtn").addEventListener("click", function () {
+        localStorage.setItem(AGE_KEY, "true"); // Save choice
+        modal.remove(); // Close popup
+    });
 
-  document.getElementById("noBtn").addEventListener("click", function () {
-    window.location.href = "https://www.budeez420crew.com";
-  });
+    document.getElementById("noBtn").addEventListener("click", function () {
+        window.location.href = "https://www.budeez420crew.com"; // Redirect to another site
+    });
 });
+
 </script>
 
   </body>
