--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
   </head>
 
   <body class="squarespace-config squarespace-editable">
+
+            <!-- Headspace Section -->
+  <header id="headspace" class="headerlogo">
+    <div class="headspace-container">
+      <img src="https://i.ibb.co/JWR2Q8LB/BUD-eez-no-background.png" alt="BUD'eez Logo" class="img-fluid mb-4" style="max-width: 300px;">
+      <h1><b><p>Exclusive perks, staking rewards, and more!</p></b></h1>
+    </div>
+  </header>
+
+    
     <!-- Logo -->
     <section class="container text-center py-4">
       <img src="https://i.ibb.co/JWR2Q8LB/BUD-eez-no-background.png" alt="BUD'eez Logo" class="img-fluid mb-4" style="max-width: 300px;">
