--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <!-- Headspace Section -->
   <header id="headspace" class="headerlogo">
     <div class="headspace-container">
-      <img src="https://i.ibb.co/JWR2Q8LB/BUD-eez-no-background.png" alt="BUD'eez Logo" class="img-fluid mb-4" style="max-width: 300px;">
+      <img src="https://i.ibb.co/JWR2Q8LB/BUD-eez-no-background.png" alt="BUD'eez Logo" class="img-fluid mb-4" style="max-width: 500px;" style="max-height: 300px;">
       <h1><b><p>Exclusive perks, staking rewards, and more!</p></b></h1>
     </div>
   </header>
