--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+
+    <!-- Attach the loading script in your <head /> -->
+    <script src="script/jup.js"></script>
+
   </head>
 
   <body class="squarespace-config squarespace-editable">
@@ -102,8 +106,6 @@
     </footer>
 
     <!-- Scripts -->
-    <script src="https://terminal.jup.ag/main-v3.js"></script>
-    <script src="script/jup.js"></script>
     <script src="script/subscribe.js"></script>
     <script src="script/age-verification.js"></script>
     <!--<script src="script/age-verification.js"></script>-->
