--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <!-- Attach the loading script in your <head /> -->
     <script src="script/jup.js"></script>
+    <script src='https://terminal.jup.ag/main-v4.js'></script>
 
   </head>
 
