--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
     <!-- Scripts -->
     <script src="script/subscribe.js"></script>
     <script src="script/age-verification.js"></script>
-    <script>
+    <script
       window.Jupiter.init({
   endpoint: "https://api.mainnet-beta.solana.com",
 });
     </script>
 
-   <script>   
+   <script 
 document.addEventListener("DOMContentLoaded", function () {
     const AGE_KEY = "isVerified21";
     
