--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <!-- Scripts -->
     <script src="script/subscribe.js"></script>
-    <script
+    <script>
       document.addEventListener("DOMContentLoaded", function () {
     const AGE_KEY = "isVerified21";
     
@@ -151,7 +151,7 @@
         window.location.href = "https://www.budeez420crew.com"; // Redirect to another site
     });
 });</script>
-    <script
+    <script>
  window.Jupiter.init({
   displayMode: "widget",
   endpoint: "https://api.mainnet-beta.solana.com",
