--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
     <!-- Scripts -->
     <script src="script/subscribe.js"></script>
     <script>
+      <div
       document.addEventListener("DOMContentLoaded", function () {
     const AGE_KEY = "isVerified21";
     
@@ -150,12 +151,14 @@
     document.getElementById("noBtn").addEventListener("click", function () {
         window.location.href = "https://www.budeez420crew.com"; // Redirect to another site
     });
-});</script>
+});</div>
+    </script>
     <script>
+      <div
  window.Jupiter.init({
   displayMode: "widget",
   endpoint: "https://api.mainnet-beta.solana.com",
-});
+});</div>
     </script>
 
  
