--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 
     <!-- Styles -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Montserrat">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -34,6 +32,19 @@
       <img src="https://i.ibb.co/JWR2Q8LB/BUD-eez-no-background.png" alt="BUD'eez Logo" class="img-fluid mb-4" style="max-width: 500px;" style="max-height: 300px;">
       <h1><b><p>Exclusive perks, staking rewards, and more!</p></b></h1>
     </div>
+<div class="w3-content" style="max-width:800px;position:relative">
+
+<img class="mySlides w3-animate-opacity" src="/w3images/snow.jpg" style="width:100%">
+<img class="mySlides w3-animate-opacity" src="/w3images/lights.jpg" style="width:100%">
+<img class="mySlides w3-animate-opacity" src="/w3images/mountains.jpg" style="width:100%">
+<img class="mySlides w3-animate-opacity" src="/w3images/forest.jpg" style="width:100%">
+
+<a class="w3-button w3-hover-dark-grey" style="position:absolute;top:45%;left:0;" onclick="plusDivs(-1)">❮</a>
+<a class="w3-button w3-hover-dark-grey" style="position:absolute;top:45%;right:0;" onclick="plusDivs(+1)">❯</a>
+</div>
+
+<div class="w3-container">
+<hr>
   </header>
 
 
@@ -105,7 +116,12 @@
       </section>
     </div>
     
-  <h4>Follow Us</h4>
+
+    <!-- Footer -->
+    <footer class="w3-center w3-padding-32 w3-black">
+      &copy; 2025 BUD'eez 420 Crew | All Rights Reserved
+
+        <h4>Follow Us</h4>
  
   <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Twitter"><i class="fa fa-twitter"></i></a>
   <a class="w3-button w3-large w3-teal" href="javascript:void(0)" title="Google +"><i class="fa fa-google-plus"></i></a>
@@ -119,10 +135,6 @@
     <a class="w3-button w3-theme" href="#myPage"><span class="w3-xlarge">
     <i class="fa fa-chevron-circle-up"></i></span></a>
   </div>
-
-    <!-- Footer -->
-    <footer class="w3-center w3-padding-32 w3-black">
-      &copy; 2025 BUD'eez 420 Crew | All Rights Reserved
     </footer>
 
     <!-- Scripts -->
