--- a/index.html
+++ b/index.html
@@ -140,14 +140,16 @@
     <!-- Scripts -->
     <script src="script/subscribe.js"></script>
     <script>
-      <div
- window.Jupiter.init({
+      window.Jupiter.init({
   displayMode: "widget",
   endpoint: "https://api.mainnet-beta.solana.com",
-});</div>
+});
     </script>
+    <script src="script/age-verification.js"></script>
 
- 
-    <!--<script src="script/age-verification.js"></script>-->
+<div style="font-family: Segoe UI; font-size: 8pt; line-height: 150%">
+    <b>Bud'eez 420 Crew™ LLC</b> | Email: <a href="mailto:creator@budeez420crew.com">creator@budeez420crew.com</a> | Website: <a href="https://budeez420crew.com">https://budeez420crew.com</a> | VAT123456 | DE89370400440532013000 | DEUTDEDBXXX
+</div>
+
 
    
