--- a/index.html
+++ b/index.html
@@ -115,7 +115,18 @@
         </div>
       </section>
     </div>
-    
+
+        <!-- Scripts -->
+    <script src="script/subscribe.js"></script>
+    <script src="script/jup.js">
+      window.Jupiter.init({
+  displayMode: "widget",
+  endpoint: "https://api.mainnet-beta.solana.com",
+});
+    </script>
+    <script src="script/age-verification.js"></script>
+
+  </body>
 
     <!-- Footer -->
     <footer class="w3-center w3-padding-32 w3-black">
@@ -137,19 +148,10 @@
   </div>
     </footer>
 
-    <!-- Scripts -->
-    <script src="script/subscribe.js"></script>
-    <script>
-      window.Jupiter.init({
-  displayMode: "widget",
-  endpoint: "https://api.mainnet-beta.solana.com",
-});
-    </script>
-    <script src="script/age-verification.js"></script>
 
 <div style="font-family: Segoe UI; font-size: 8pt; line-height: 150%">
     <b>Bud'eez 420 Crew™ LLC</b> | Email: <a href="mailto:creator@budeez420crew.com">creator@budeez420crew.com</a> | Website: <a href="https://budeez420crew.com">https://budeez420crew.com</a> | VAT123456 | DE89370400440532013000 | DEUTDEDBXXX
 </div>
-
+</html>
 
    
